Issue #3480375 by oways23, alshami: Fix Blocks Filter Not Showing Placeholder in Off-Canvas or Layout Builder Modal

--- a/scss/theme/vlb-enhancements.base.scss
+++ b/scss/theme/vlb-enhancements.base.scss
@@ -562,6 +562,10 @@ body {
   .form-time {
     color: #222330 !important;
     background-color: #fff !important;
+
+    &::placeholder {
+      color: #686868 !important;
+    }
   }
 
   form.section-library-add-section-to-library {
